--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/aperture.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>学生信息管理系统</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./public/aperture.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>学生信息管理系统</title>
+  <style>
+    body {
+      margin: 1px;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
