--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./public/aperture.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>学生信息管理系统</title>
-  <style>
-    body {
-      margin: 1px;
-    }
-  </style>
+    <meta charset="UTF-8"/>
+    <link href="./public/aperture.svg" rel="icon" type="image/svg+xml"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>学生信息管理系统</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+<div id="app"></div>
+<script src="/src/main.js" type="module"></script>
 </body>
 
 </html>
